[tool.poetry]
name = "poke-berries-stats"
version = "0.1.0"
description = ""
authors = ["Marilia Fernandez <marilia.mfernandez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.4.3"
Flask = "^2.1.2"
requests = "^2.28.1"
numpy = "^1.23.1"
pytest = "^7.1.2"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
